2015-06-04 Martin Grønholdt

* tools/itoa.h: Removed.


2015-06-03 Martin Grønholdt

* tools/ftoa.c: Added file.
			  : Added ftoa.
* tools/itoa.c (itoa): Error checking.
			   (itoa): Negative number handling.
			   (itoa): Value is now long type.
			   (itoa): Base is unsigned char.
* tools(strxtra.h): Moved itoa here.
			 	  : Added ftoa.


2015-06-01 Martin Grønholdt

* tmpl/tmpl.c (global): Added get_var.
* tmpl/tmpl.c (tmpl_apply): Still not done. Can count and find tokens.
* slighttp/http-response.c (http_send_response): Added message size to debug output.
* fs/connect/index.html: Renamed to index.tmpl.


2015-05-31 Martin Grønholdt

* slighttp/http-response.c (http_generate_response): Fixed a bug where 404
													 status was not set and
													 the wrong content length
													 was returned.
* tools/strxtra.c (strrpl): No longer creates a new string.
* Makefile: Made file system generation delete the old zip first.
* tmpl/tmpl.c (global): Added get_token_size.
			  (global): Added struct tmpl_token.
* tmpl/tmpl.h (global): Added TMPL_TOKEN_ID.


2015-05-30 Martin Grønholdt (committed)

* fs/int_flash.h (flash_dump): Fixed parameter type from unsigned int to size_t.
* 				 (flash_dump_mem): Fixed parameter type from unsigned int to size_t.
* dl_list.h: moved to tools/dl_list.h
* fs/zip.c (zip_load_header): Didn't actually check for he right header signature.
* Makefile: Added user/tmpl to MODULES, so it compiles.
* tmpl/tmpl.c (global): Created file.
			  (global): Added init_tmpl.
			  (global): Added tmpl_apply.
			  (global): Added tmpl_destroy.
			  (global): Added tmpl_add_var.
			  (global): Included tools/strxtra.h
* tmpl/tmpl.h (global): Created file.
			  (global): Added struct tmpl_context.
			  (global): Added init_tmpl.
			  (global): Added tmpl_apply.
			  (global): Added tmpl_destroy.
			  (global): Added tmpl_add_var.		  
* net/wifi_config.c (global): Added file.
					(global): Added wifi_conf_test.