@@ -4,7 +4,7 @@
 </head>
 <body>
 <h1>Network connection setup</h1>
-<p>Current configured network: ${network}</p>
+<p>Current configured network: </p>
 <form action="/ap_set.html" method="POST">
 Networks: 
 <select>
