@@ -29,12 +29,7 @@
 #include "tools/strxtra.h"
 #include "slighttp/http.h"
 #include "fs/fs.h"
-#include "tmpl/tmpl.h"
 
-/**
- * @brief Template context for the page.
- */
-static struct tmpl_context *wifi_conf_context = NULL;
 /**
  * @brief Tell if we will handle a certain URI.
  * 
@@ -60,50 +55,9 @@ bool ICACHE_FLASH_ATTR wifi_conf_test(char *uri)
 char ICACHE_FLASH_ATTR *wifi_conf_html(char *uri, struct http_request *request)
 {
     char *html = NULL;
-    char *tmpl = NULL;
-    FS_FILE_H file;
-    size_t	size;
-    char *tmpl_uri = NULL;
     
     debug("In network config page generator (%s).\n", uri);
-    
-    //Change extension.
-    size = os_strlen(uri);
-    tmpl_uri = db_malloc(size, "tmpl_uri wifi_conf_html");
-    tmpl_uri = os_memcpy(tmpl_uri, uri, size - 1);
-    tmpl_uri = strrpl(tmpl_uri, ".tmpl", size - 5);
-    tmpl_uri[size] = '\0';
-    
-    //Try to open the URI as a file.
-    file = fs_open(tmpl_uri);
-    //Check if it went okay.
-    if (file > -1)
-    {
-        //Get the size of the message.
-        size = fs_size(file);
-        //Get memory for the message.
-        tmpl = db_malloc((int)size + 1, "html wifi_conf_html");
-        //Read the message from the file to the buffer.
-        fs_read(tmpl, size, sizeof(char), file);
-        //Zero terminate, to make sure.
-        tmpl[size] = '\0';
-        fs_close(file);        
-    }
-	else
-	{
-		error("Could not open template.\n");
-		return(NULL);
-	}
-
-    db_free(tmpl_uri);
-    
-    //Run through the template engine.
-    wifi_conf_context = init_tmpl(tmpl);
-    //Add variables to template.
-    tmpl_add_var(wifi_conf_context, "network", SSID_PASSWORD, TMPL_STRING);
-    //Render template.
-    html = tmpl_apply(wifi_conf_context);
-    
+ 
     return(html);
 }
 
@@ -115,6 +69,4 @@ char ICACHE_FLASH_ATTR *wifi_conf_html(char *uri, struct http_request *request)
 void ICACHE_FLASH_ATTR wifi_conf_destroy(char *html)
 {
 	debug("Freeing static network config data.\n");
-	tmpl_destroy(wifi_conf_context);
-	db_free(html);
 }
